--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "enzyme": "^3.11.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -36,5 +37,10 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://devjoi2018.github.io/gifsExpertApp/"
+  "homepage": "https://devjoi2018.github.io/gifsExpertApp/",
+  "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme-to-json": "^3.6.2"
+  }
 }
